--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -3,10 +3,215 @@
 
 @{
     ViewData["Title"] = "Register";
+    Layout = "~/Views/Shared/_BlankLayout.cshtml";
 }
 
-
 <!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Form-v10 by Colorlib</title>
+	<!-- Mobile Specific Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- Font-->
+	<link rel="stylesheet" type="text/css" href="css/montserrat-font.css">
+	<link rel="stylesheet" type="text/css" href="fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
+	<!-- Main Style Css -->
+    <link rel="stylesheet" href="~/css/Register.css"/>
+</head>
+<body class="form-v10">
+	<div class="page-content">
+		<div class="form-v10-content">
+			<form class="form-detail" action="#" method="post" id="myform">
+				<div class="form-left">
+					<h2>General Infomation</h2>
+					<div class="form-row">
+                        <input asp-for="Name" asp-controller="Account" class="form-control" id="Name" aria-describedby="NameHelp" placeholder="Full name">
+						@* <span class="select-btn">
+						  	<i class="zmdi zmdi-chevron-down"></i>
+						</span> *@
+					</div>
+                    <div class="form-row">
+                        <input asp-for="UserName" asp-controller="Account" class="form-control" id="UserName" aria-describedby="UserNameHelp" placeholder="UserName">
+                        @* <span class="select-btn">
+                        <i class="zmdi zmdi-chevron-down"></i>
+                        </span> *@
+                    </div>
+                    <div class="form-row">
+                        <input asp-for="Password" class="form-control" id="Password" placeholder="Password">
+                        @* <span class="select-btn">
+                        <i class="zmdi zmdi-chevron-down"></i>
+                        </span> *@
+                        <div class="form-row">
+                             <input asp-for="ConfirmPassword" class="form-control" id="ConfirmPassword" placeholder="Retype password">
+                         @* <span class="select-btn">
+                            <i class="zmdi zmdi-chevron-down"></i>
+                            </span> *@
+                            <div class="form-row">
+                                <input asp-for=" Dob" asp-controller="Account" class="form-control" id=" Dob" aria-describedby="DobHelp">
+                                @* <span class="select-btn">
+                                <i class="zmdi zmdi-chevron-down"></i>
+                                </span> *@
+                            </div>
+                            <div class="form-row">
+                                <input asp-for="MobileNumber" class="form-control" id="MobileNumber" aria-describedby="MobHelp" placeholder="Enter Mobile...">
+                                @* <span class="select-btn">
+                                <i class="zmdi zmdi-chevron-down"></i>
+                                </span> *@
+                            </div>
+                            <div class="form-row">
+                                <input asp-for="Address" asp-controller="Account" class="form-control" id="Address " aria-describedby="AddressHelp" placeholder="Enter Address...">
+                                @* <span class="select-btn">
+                                <i class="zmdi zmdi-chevron-down"></i>
+                                </span> *@
+                            </div>
+                            <div class="form-row">
+                                <select asp-for="WardId" id="Ward" name="WardId">
+                                    <option value="">Select a Ward</option>
+                                    <option value="1">Garha Ward - Ward No.1 </option>
+                                    <option value="2">Verendrapur ward- Ward No.2 </option>
+                                    <option value="3">Tripuri Ward -ward No.03 </option>
+                                    <option value="4">Shankar shah nagar ward- Ward No.o4 </option>
+                                    <option value="5">Sardar Ballabh Bhai Patel Ward - Ward No.05 </option>
+                                    <option value="6">Indira Gandhi Ward- Ward No.06 </option>
+                                    <option value="7">Veersawarkar Ward - Ward No.07 </option>
+                                    <option value="8">Gwarighat Ghat- Ward No.08 </option>
+                                    <option value="9">Dada Baburaw Paranjpe Ward - Ward No.09 </option>
+                                    <option value="10">Gupteshwar Ward - Ward No.10 </option>
+                                    <option value="11">Giriraj Kapoor- Ward No.11 </option>
+                                    <option value="12">Dr. George Disilwa Ward - Ward No.12 </option>
+                                    <option value="13">P. Banarasi Das Bhano Ward - Ward No.13 </option>
+                                    <option value="14">Narsingh Ward- Ward No.14 </option>
+                                    <option value="15">Madan Mahal Ward - Ward No.15 </option>
+                                    <option value="16">Maharana Pratap Ward) - Ward No.16 </option>
+                                    <option value="17"> Ranidurgawati Ward- Ward No.17 </option>
+                                    <option value="18">Shaheed Gulab Singh Ward- Ward No.18 </option>
+                                    <option value="19">Kamla Nehru Nagar Ward - Ward No.19 </option>
+                                    <option value="20">Kasturba Gandhi Ward - Ward No.20 </option>
+                                    <option value="21">Swami Vivekanand Ward- Ward No.21 </option>
+                                    <option value="22">Jawahar Ganj Ward- Ward No.22 </option>
+                                    <option value="23">P. Lokmanya Bal Gangadhar Tilak Ward - Ward No.23 </option>
+                                    <option value="24">Hanumantal Ward- Ward No.24 </option>
+                                    <option value="25">Mahatma Gandhi Ward - Ward No.25 </option>
+                                    <option value="26">Govind Ballabh Pant Ward - Ward No.34 </option>
+                                    <option value="27">Cherital Ward- Ward No.35 </option>
+                                    <option value="28">Jayprakash Narayan Ward- Ward No.36 </option>
+                                    <option value="29">Dr. Rammanohar Lohiya Ward- Ward No.37 </option>
+                                    <option value="30">P. Deendayal Upadhayaya Ward - Ward No.38 </option>
+                                    <option value="31">Rajeev Gandhi Ward- Ward No.31 </option>
+                                    <option value="32">Subhadra Kumari Chouhan Ward - Ward No.32 </option>
+                                    <option value="33">Swami Dayanand Saraswati Ward- Ward No.33 </option>
+                                    <option value="34">P. Bhavani Prashad Tiwari Ward- Ward No.34 </option>
+                                    <option value="35">Maharaja Agrasen Ward - Ward No.35 </option>
+                                    <option value="36">Mo. Abdul Kalam Azaad Ward - Ward No.36 </option>
+                                    <option value="37">Dr. Rajendra Prashad Ward- Ward No.37 </option>
+                                    <option value="38">P. Motilal Nehru Ward- Ward No.38 </option>
+                                    <option value="39">Chitranjan Das Ward - Ward No.39 </option>
+                                    <option value="40">Dr. Zakeer Husen Ward- Ward No.40 </option>
+                                    <option value="41">Sanjay Gandhi Ward - Ward No.41 </option>
+                                    <option value="42">Subhas Chandra Bosh Ward - Ward No.42 </option>
+                                    <option value="43">Dr. Shyam Prashad Mukharji Ward - Ward No.43 </option>
+                                    <option value="44">Acharya Vinova Bhave Ward - Ward No.44 </option>
+                                    <option value="45">Sheetla Mai Ward - Ward No.45 </option>
+                                    <option value="46">P. Dwarka Prashad Mishra Ward - Ward No.46 </option>
+                                    <option value="47">Seth Govind Das Ward - Ward No.47 </option>
+                                    <option value="48">Siddh Baba Ward - Ward No.48 </option>
+                                    <option value="49">Lal Bahadur Shastari Ward- Ward No.49 </option>
+                                    <option value="50">Thakkar Gram Ward - Ward No.50 </option>
+                                    <option value="51">Ravindra Nath Tegor Ward- Ward No.51 </option>
+                                    <option value="52">P. Madan Mohan Malviya Ward - Ward No.52 </option>
+                                    <option value="53">Maharshi Arvind Ward - Ward No.53 </option>
+                                    <option value="54">P. Jawahar Lal Nehru Ward - Ward No.54 </option>
+                                    <option value="55">Khair Mai Ward - Ward No.55 </option>
+                                    <option value="56">Shaheed Abdul Ameed Ward - Ward No.56 </option>
+                                    <option value="57">Maharshi Mahesh Yogi Ward- Ward No.57 </option>
+                                    <option value="58">Sarva Palli Dr. Radha Krishnan Ward - Ward No.58 </option>
+                                    <option value="59">Ashfaak Ullah Khan Ward - Ward No.59 </option>
+                                    <option value="60">Jabalpur (M Corp.) - Ward No.3 </option>
+                                    <option value="61">Diwan Adhaar Singh Ward-ward no. 61 </option>
+                                    <option value="62">Ambedkar Ward-ward no. 62 </option>
+                                    <option value="63">Shaheed Bhagat Singh Ward-ward no. 63 </option>
+                                    <option value="64">Maharshi Sudarshan Ward - ward no. 64 </option>
+                                    <option value="65">Subhash Chandra Benaji Ward- ward no. 65 </option>
+                                    <option value="66">Rani Laxmi Bai Ward-ward no.66 </option>
+                                    <option value="67">Rani Awanti Bai Ward-ward no. 67 </option>
+                                    <option value="68">Gokalpur Ward- ward no. 68 </option>
+                                    <option value="69">Chandra Shekhar Azaad Ward-ward no.69 </option>
+                                    <option value="70">Lala Lajpat Rai Ward-ward no. 70 </option>
+                                    <option value="71">Naya Ward- ward no. 71 </option>
+                                    <option value="72">Naya Ward-ward no 72 </option>
+                                    <option value="73">Naya Ward - ward no. 73 </option>
+                                    <option value="74">Naya Ward- ward no. 74 </option>
+                                    <option value="75">Naya Ward-ward no 75 </option>
+                                    <option value="76">Naya Ward-ward no 76 </option>
+                                    <option value="77">Naya Ward-ward no 77 </option>
+                                    <option value="78">Naya Ward-ward no 78 </option>
+                                    <option value="79">Naya Ward-ward no 79 </option>
+
+                                </select>
+                                <span class="select-btn">
+                                    <i class="zmdi zmdi-chevron-down"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+				
+					
+					<div class="form-group">
+						
+						
+					</div>
+				</div>
+				 <div class="form-right">
+                    @*	<h2>Additional Details</h2>
+					@* <div class="form-row">
+                        <input asp-for="Address" class="form-control" id="Address" placeholder="1234 Main St">
+                    </div> 
+					<div class="form-row">
+                        <input asp-for="Education" class="form-control" id="Education" placeholder="Enter Education...">
+                    </div>
+                    <div class="form-row">
+                        <input asp-for="AadharNumber" class="form-control" id="AadharNumber" placeholder="Enter AadharNumber...">
+                    </div>
+                    <div class="form-row">
+                        <input asp-for="SamagraID" class="form-control" id="SamagraID" placeholder="Enter SamagraID...">
+                    </div>  *@
+                   @*  <div class="form-row">
+                        <input asp-for="VoterID" class="form-control" id="VoterID" placeholder="Enter VoterID...">
+                    </div> *@
+                    @* <div class="form-row">
+                        <input asp-for="Caste" class="form-control" id="Caste" placeholder="Enter Caste...">
+                    </div>
+                    <div class="form-row">
+                        <input asp-for="VoterID" class="form-control" id="VoterID" placeholder="Enter VoterID...">
+                    </div>
+                    <div class="form-row">
+                        <input asp-for="VoterCount" class="form-control" id="VoterCount" placeholder="Enter Total number of voters in the house...">
+                    </div>
+					<div class="form-group">				
+					</div> *@
+		
+					<div class="form-row-last">
+                        <input asp-action="Register" asp-controller="Account" type="submit" class="register" value="Register" id="registerpagebuttonid">
+
+                       @*  <input type="submit" name="register" class="register" value="Register Badge"> *@
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</html>
+
+
+
+
+
+
+
+
+
+        @* <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -34,8 +239,9 @@
 
                 <form method="post">
                     <div class="input-group mb-3">
-                        <input asp-for="Name" asp-controller="Account" class="form-control" id="Name" aria-describedby="NameHelp" placeholder="Full name">
-                        <div class="input-group-append">
+                      
+                    
+                    <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-user"></span>
                             </div>
@@ -173,7 +379,7 @@
                             <option value="79">Naya Ward-ward no 79 </option>
 
                         </select>
-                    </div>
+                    </div> *@
                         @* <div class="">
                         <input asp-for="Ward" asp-controller="Account" class="form-control" id="Ward" aria-describedby="WardHelp" placeholder="Enter Ward...">
                         <div class="input-group-append">
@@ -182,7 +388,7 @@
                             </div>
                         </div>
                     </div> *@
-                    <div class="row">
+ @*                    <div class="row"> *@
                        @*  <div class="col-8">
                             <div class="icheck-primary">
                                 <input type="checkbox" id="agreeTerms" name="terms" value="agree">
@@ -192,11 +398,11 @@
                             </div>
                         </div> *@
                         <!-- /.col -->
-                        <div class="col-4">
+                       @*  <div class="col-4">
                             <button asp-action="Register" asp-controller="Account" type="submit" class="btn btn-primary btn-block">Register</button>
-                        </div>
+                        </div> *@
                         <!-- /.col -->
-                    </div>
+                    @* </div>
                 </form>
 
               
@@ -217,3 +423,4 @@
 </body>
 </html>
 
+ *@
