--- a/VidhayakApp.Web/wwwroot/css/site.css
+++ b/VidhayakApp.Web/wwwroot/css/site.css
@@ -19,6 +19,9 @@ html {
 body {
     margin-bottom: 60px;
 }
+.background_Image_For_Login_Page{
+    background-image: url("~/dist/img/backgroundImage.jpg");
+}
 .body_img_user_table {
     background: url(/dist/img/html_table.jpg) center / cover;
 }
