--- a/VidhayakApp.Web/Views/User/Profile.cshtml
+++ b/VidhayakApp.Web/Views/User/Profile.cshtml
@@ -1,26 +1,20 @@
 ﻿@using VidhayakApp.Web.ViewModels;
-@model LoginViewModel;
+@model ShowUserandItsDetails
+
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
     ViewData["Title"] = "Profile";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
+    // Access HttpContext
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
 }
 
 <section b-sa87j8ggoz="" class="content">
     <div b-sa87j8ggoz="" class="container-fluid">
 
-        @* <nav aria-label="breadcrumb">
-            <ol class="breadcrumb mb-0 d-flex align-items-center">
-                <li class="breadcrumb-item">
-                    <a href="index.html" class="link"><i class="mdi mdi-home-outline fs-4"></i></a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                    Profile
-                </li>
-            </ol>
-        </nav> *@
-
-        <div class="container-fluid">
+               <div class="container-fluid">
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
@@ -32,21 +26,10 @@
                         <div class="card-body">
                             <center class="m-t-30">
                                 <img src="~/dist/img/user8-128x128.jpg" class="rounded-circle" width="150">
-                                <h4 class="card-title m-t-10">Hanna Gover</h4>
-                                <h6 class="card-subtitle">Accoubts Manager Amix corp</h6>
+                                <h4 class="card-title m-t-10"></h4>
+                                <h6 class="card-subtitle"></h6>
                                 <div class="row text-center justify-content-md-center">
-                                    <div class="col-4">
-                                        <a href="javascript:void(0)" class="link">
-                                            <i class="mdi mdi-account-network"></i>
-                                            <font class="font-medium">254</font>
-                                        </a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a href="javascript:void(0)" class="link">
-                                            <i class="mdi mdi-camera"></i>
-                                            <font class="font-medium">54</font>
-                                        </a>
-                                    </div>
+                                                                       
                                 </div>
                             </center>
                         </div>
@@ -54,10 +37,10 @@
                             <hr>
                         </div>
                         <div class="card-body">
-                            <small class="text-muted">Email address </small>
-                            <h6>hannagover@gmail.com</h6>
-                            <small class="text-muted p-t-30 db">Phone</small>
-                            <h6>+91 654 784 547</h6>
+                            <small class="text-muted">@context.Session.GetString("UserName")</small>
+                          
+                            <small class="text-muted p-t-30 db">@context.Session.GetString("Name") </small>
+                           
                             <small class="text-muted p-t-30 db">Address</small>
                             <h6>71 Pilgrim Avenue Chevy Chase, MD 20815</h6>
                             <div class="map-box">
@@ -154,3 +137,5 @@
         <!-- /.row (main row) -->
     </div><!-- /.container-fluid -->
 </section>
+
+<script src="/_framework/aspnetcore-browser-refresh.js"></script>
